fixes send message form on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,12 +52,6 @@
     font-size: 3em;
 }
 
-@media (max-device-width:480px) {
-    .slogan {
-        font-size: 1.5em;
-    }
-}
-
 .cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -122,14 +116,30 @@
     text-align: center;
 }
 
-.send-message input {
+.send-message input, textarea#message {
     width: 100%;
     margin-bottom: 3%;
 }
 
 textarea#message {
     height: 100px;
-    width: 100%;
-    margin-bottom: 3%;
     resize: none;
+}
+
+@media (max-device-width:480px) {
+    .slogan {
+        font-size: 1.5em;
+    }
+
+    .send-message {
+        margin: 4% 20%;
+    }
+
+    .send-message h3 {
+        font-size: 1.5em;
+    }
+
+    .send-message input, textarea#message {
+        border: 1px solid gray;
+    }
 }
